objects/Haystak_Account_Assignment_Tracking__c.object
<CustomObject>
    <description>Story W-001251</description>
    <fields>
        <fullName>AM_Team_Name__c</fullName>
        <label>AM Team Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POAOwner_Name__c</fullName>
        <label>POA Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_of_Action_Name__c</fullName>
        <label>POA: Plan of Action Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Haystak Account Assignment Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_of_Action_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>AM_Team_Name__c</columns>
        <columns>POAOwner_Name__c</columns>
        <columns>Team_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Haystak Account Assignment Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Haystak Account Assignment Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>